# constrained_based_networks

./: .gitignore  CMakeLists.txt  README  foo  manifest.xml
bindings/ruby/: CMakeLists.txt  constrained_based_networks_ruby.pc.in  gecode_composition_management.rb
bindings/ruby/constrained_based_networks/: core.rb  test.rb
bindings/ruby/ext/: ConstrainedBasedNetworks.cpp  GecodeCompositionManagement.cpp  gecode_composition_management.cpp
bindings/ruby/gecode_composition_management/: core.rb  test.rb
bindings_aus/ruby/: constrained_based_networks.rb
bindings_aus/ruby/ext/: ConstrainedBasedNetworks.cpp
final_testcases/minimal_demo/: avalon_model.xml  solutions-avalon_model.xml
final_testcases/minimal_demo/data/: class-network-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0.gexf  class-network-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-2.gexf  class-network-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0.gexf  class-network-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-1.gexf  class-network-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-2.gexf  class-network-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0.gexf  class-network-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-1.gexf  class-network-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-2.gexf  class-network-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0.gexf  class-network-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-1.gexf  class-network-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-2.gexf  class-network-avalon_model.xml-0-0-7-0-0-7-0-0-7-0.gexf  class-network-avalon_model.xml-0-0-7-0-0-7-0-0-7-1.gexf  class-network-avalon_model.xml-0-0-7-0-0-7-0-0-7-2.gexf  class-network-avalon_model.xml-0-0-7-0-0-7-0.gexf  class-network-avalon_model.xml-0-0-7-0-0-7-2.gexf  class-network-avalon_model.xml-0-0-7-0-0-8-0-0-10-1.gexf  class-network-avalon_model.xml-0-0-7-0-0-8-0.gexf  class-network-avalon_model.xml-0-0-7-0-0-8-1.gexf  class-network-avalon_model.xml-0-0-7-0-0-8-2.gexf  class-network-avalon_model.xml-0-0-7-1.gexf  class-network-avalon_model.xml-0.gexf  class-network-avalon_model.xml-1.gexf  class-network-avalon_model.xml-2.gexf  instance-solution-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0.gexf  instance-solution-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-1.gexf  instance-solution-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-2.gexf  instance-solution-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-1-0.gexf  instance-solution-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-1-1.gexf  instance-solution-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-1-2.gexf  instance-solution-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-2-0.gexf  instance-solution-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-2-1.gexf  instance-solution-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-2-2.gexf  instance-solution-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0.gexf  instance-solution-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-1.gexf  instance-solution-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-2.gexf  instance-solution-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-1-0.gexf  instance-solution-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-1-1.gexf  instance-solution-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-1-2.gexf  instance-solution-avalon_model.xml-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-0-0-7-2-0.gexf  (+80 more)
minimal_demo/: avalon_model.xml
result-12/: output-0000.gexf
src/: CMakeLists.txt  ClassSolution.cpp  ClassSolution.hpp  Component.cpp  Component.hpp  Composition.cpp  Composition.hpp  DataService.cpp  DataService.hpp  EventModelHandler.cpp  EventModelHandler.hpp  Import.cpp  Import.hpp  InstanceSolution.cpp  InstanceSolution.hpp  Logger.cpp  Logger.hpp  NetworkHelper.cpp  NetworkHelper.hpp  Pool.cpp  Pool.hpp  Port.hpp  PortHandler.cpp  PortHandler.hpp  Query.cpp  Query.hpp  Solution.cpp  Solution.hpp  SolutionXML.cpp  SolutionXML.hpp  SpecializedComponent.hpp  StateMachine.cpp  StateMachine.hpp  Task.cpp  Task.hpp  XML.cpp  XML.hpp  cbn_based_on_graph.cpp  cbn_class_on_model.cpp  cbn_gexf_to_dot.cpp  (+10 more)
test/: constraints.hpp  dump.hpp  main-old.cpp  main.cpp  state_machines.hpp
tests/: CMakeLists.txt  avalon_model.xml  constraints.hpp  dump.hpp  main.cpp  main_instance.cpp  main_owl.cpp  specialized.cpp  state_machines.hpp  tests.hpp
